--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ serde = "1"
 serde_json = "1"
 actix-cors = "0.5"
 config = "0.11"
+slog = "2.7.0"
+slog-term = "2.8.0"
+slog-async = "2.7.0"
+slog-json = "2.4.0"
+chrono = "0.4"
