--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,21 @@
 [package]
 name = "rust-actix-rest-api-boilerplate"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
+actix-web = "4.0.0-beta.14"
+actix-cors = "0.6.0-beta.6"
+actix-http = "3.0.0-beta.15"
 serde = "1"
 serde_json = "1"
-actix-cors = "0.5"
 config = "0.11"
 slog = "2.7.0"
 slog-term = "2.8.0"
 slog-async = "2.7.0"
 slog-json = "2.4.0"
 chrono = "0.4"
-sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono", "json"] }
+sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono", "json"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
