--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ slog-json = "2.4.0"
 chrono = "0.4"
 sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono", "json"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
+redis = { version = "0.21", features = ["tokio-comp"] }
+mobc = "0.7"
