--- a/data/config/app.toml
+++ b/data/config/app.toml
@@ -11,3 +11,13 @@ dbname = "dbname"
 connect_timeout = 60
 idle_timeout = 5
 max = 1000
+
+[redis]
+host = "127.0.0.1"
+port = 6379
+password = "password"
+db = 0
+pool_get_timeout_seconds = 10
+pool_max_open = 100
+pool_max_idle = 8
+pool_max_lifetime_seconds = 60
