--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.14"
+actix-web = "4.0.0-beta.15"
 actix-cors = "0.6.0-beta.6"
 actix-http = "3.0.0-beta.15"
-serde = "1"
+serde = {version = "1", features = ["derive"] }
 serde_json = "1"
 config = "0.11"
 slog = "2.7.0"
 slog-term = "2.8.0"
 slog-async = "2.7.0"
 slog-json = "2.4.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono", "json"] }
 uuid = { version = "0.8", features = ["v4", "serde"] }
 redis = { version = "0.21", features = ["tokio-comp"] }
