--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ slog-term = "2.9.1"
 slog-async = "2.8.0"
 slog-json = "2.6.1"
 chrono = { version = "0.4", features = ["serde"] }
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "postgres", "chrono", "json"] }
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "postgres", "mysql", "chrono", "json"] }
 uuid = { version = "1.16.0", features = ["v4", "serde"] }
 redis = { version = "0.29.5", features = ["tokio-comp"] }
 mobc = "0.8"
