--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
   db:
-    image: postgres:14-alpine
-    container_name: postgres
+    image: mysql:8
+    container_name: mysql8
     volumes:
-      - ./data/postgresql:/var/lib/postgresql/data/pgdata
+      - ./data/mysql/data/mysql:/var/lib/mysql
+      - ./data/mysql/data/config:/etc/mysql/conf.d
     ports:
-      - 5432:5432
+      - 3306:3306
     environment:
       POSTGRES_PASSWORD: Q2eywi5dpX1nciNj906faYHGXoWUhR1R
       PGDATA: /var/lib/postgresql/data/pgdata
