更新数据库名字

--- a/data/config/app.toml
+++ b/data/config/app.toml
@@ -7,7 +7,7 @@ user = "root"
 password = "sGaZoXfea1fdxSVZ4GsA"
 host = "127.0.0.1"
 port = 3306
-dbname = "ys_center_mail"
+dbname = "your_db_name"
 connect_timeout = 60
 idle_timeout = 5
 max = 1000
